# smartscreen

./: .gitignore  CMakeLists.txt  build.bat  build_run.bat  main.cpp
client/: blackscreen.cpp  blackscreen.h  bluetooth.cpp  bluetooth.h  common.h  config.cpp  config.h  globals.cpp  main.cpp
client/enterprise/: supabase.cpp  supabase.h
client/p2p/: discovery.cpp  discovery.h  transfer.cpp  transfer.h
client/video/: player.cpp  player.h
docs/: PROJECT_SUMMARY.md  dashboard.html  index.html
supabase/: schema.sql
web/: dashboard.html
